# OpenCVDemo

./: README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/genialsir/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_detector.cpp  face_detector.h  opencv_jni.cpp
app/src/main/java/com/genialsir/opencvdemo/: FaceRecognitionActivity.java  MainActivity.java  OpenCVAssistant.java
app/src/main/java/com/genialsir/opencvdemo/imagemanipulations/: ImageManipulationsActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/genialsir/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
open_cv_java/: build.gradle
open_cv_java/src/main/java/org/opencv/android/: AsyncServiceHelper.java  StaticHelper.java
open_cv_java/src/main/java/org/opencv/core/: Mat.java
